<?xml version="1.0.0"?>
    <package>
    <name>ekf</name>
    <version>0.0.1</version>
    <description>Farming Robot</description>
    <maintainer email="noigay12@cdythadong.edu.vn">t</maintainer>

    <license>BSD</license>

    <author email="noigay12@cdythadong.edu.vn">Dong Tran Huu Quoc</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>gmapping</run_depend>
    <run_depend>map_server</run_depend>  
    <run_depend>move_base</run_depend>
    <run_depend>imu-filter-madgwick</run_depend>

    <export>
    </export>
</package>
